[GM3Restyling] Fixing general Settings styles
This fixes several settings styles:
* Increase right margin
* Use the thick scrollbar
* Remove auto focuses on buttons
* Always add a top header for close button
* Locations and Throttlign: increase bottom padding
* Shortcuts: increase category header paddings
* Shortcuts: Top-align shortcut description

Bug: 368238837, 376195211
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5999484
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/mobile_throttling/throttlingSettingsTab.css
+++ b/front_end/panels/mobile_throttling/throttlingSettingsTab.css
@@ -5,6 +5,7 @@
  */
 
 .add-conditions-button {
+  margin-bottom: var(--sys-size-5);
   border: none;
 }
 
@@ -96,21 +97,10 @@
 }
 
 .settings-card-container-wrapper {
-  padding-top: var(--sys-size-8);
   padding-bottom: var(--sys-size-8);
   overflow: auto;
-  scrollbar-width: thin;
-}
-
-@media (max-width: 1000px) {
-  .settings-card-container-wrapper {
-    position: absolute;
-    top: var(--sys-size-8);
-    left: 0;
-    right: 0;
-    bottom: 0;
-    overflow: auto;
-  }
+  position: absolute;
+  inset: var(--sys-size-8) 0 0;
 }
 
 .settings-card-container {
